@@ -1,1 +1,3 @@
 # utf8-resources
+
+`export MAVEN_OPTS="$MAVEN_OPTS -Djava.ext.dirs=$JAVA_HOME/jre/lib/ext:target/ext-libs"`
